--- a/res/layout/mainframe.xml
+++ b/res/layout/mainframe.xml
@@ -3,7 +3,8 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
-	android:orientation="vertical">
+	android:orientation="vertical"
+	android:layout_weight="1.0">
 
 	<ScrollView
 		android:layout_height="match_parent"
